@@ -1,14 +1,20 @@
-/*!
- * jQuery UI Tabs 1.9.2
- * http://jqueryui.com
- *
- * Copyright 2012 jQuery Foundation and other contributors
- * Released under the MIT license.
- * http://jquery.org/license
- *
- * http://docs.jquery.com/UI/Tabs#theming
- */
+@import "flora.css";
 
+/* Caution! Ensure accessibility in print and other media types... */
+@media projection, screen { /* Use class for showing/hiding tab content, so that visibility can be better controlled in different media types... */
+	.ui-tabs-hide {
+		display: none;
+	}
+}
+
+/* Hide useless elements in print layouts... */
+@media print {
+	.ui-tabs-nav {
+		display: none;
+	}
+}
+
+/* Skin */
 .ui-tabs-nav, .ui-tabs-panel {
 	font-family: "Trebuchet MS", Trebuchet, Verdana, Helvetica, Arial, sans-serif;
 	font-size: 12px;		
@@ -73,4 +79,5 @@
 .ui-tabs-panel {
 	margin-top: 10px;
 }
+
 
